Fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
 div {
   padding: .5rem;
   text-align: center;
-  margin: .8rem;
+  margin: .75rem;
 }
 
 a {
